# multi-ai-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: README.md
demo/: README.md
demo/input/: fast-triage.json  release-risk.json
demo/output/: demo-summary.json  fast-triage.json  release-risk.json
docs/: architecture.md  azure-foundry.md  routing-playbook.md
scripts/: run_live_demo.py
src/: __init__.py
src/multi_ai_gateway/: __init__.py  azure_provider.py  cli.py  config.py  gateway.py  main.py  models.py  router.py  scenarios.py
tests/: test_gateway.py
