[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-ai-gateway"
version = "0.1.0"
description = "Unified LLM routing gateway with intelligent model selection and failover"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
google = ["google-generativeai>=0.3.0"]
azure = ["azure-openai>=1.0.0"]
cache = ["redis>=5.0.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Inferensys/multi-ai-gateway"
Repository = "https://github.com/Inferensys/multi-ai-gateway"
Documentation = "https://github.com/Inferensys/multi-ai-gateway#readme"
