[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "multi-ai-gateway"
version = "0.2.0"
description = "Deterministic model routing gateway with Azure-backed execution and fallback tracing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "openai>=1.75.0,<2.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mag = "multi_ai_gateway.cli:main"

[project.urls]
Homepage = "https://github.com/Inferensys/multi-ai-gateway"
Repository = "https://github.com/Inferensys/multi-ai-gateway"
Documentation = "https://github.com/Inferensys/multi-ai-gateway#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_ai_gateway"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
